--- a/style.css
+++ b/style.css
@@ -8,3 +8,25 @@ body {
     font-size: 16px;
     font-family: "Roboto";
 }
+
+.section-main {
+    background-color: #556b2f;
+    padding-top: 40px;
+    padding-bottom: 120px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.section-main-logo {
+    width: 160px;
+}
+
+.section-main-title {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    color: #fff;
+    font-family: "Lora";
+    font-size: 55px;
+    font-weight: 700;
+}
