--- a/style.css
+++ b/style.css
@@ -50,3 +50,57 @@ body {
     cursor: pointer;
     text-transform: uppercase;
 }
+
+.second-section {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 40px;
+    padding: 100px 40px;
+}
+
+.second-section-img {
+    width: 500px;
+    border: 5px solid #556b2f;
+    border-radius: 20px;
+}
+
+.second-section-info {
+    margin-left: 30px;
+    max-width: 600px;
+}
+
+.section-subtitle {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    color: #8fbc8f;
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.section-title {
+    margin-top: 0px;
+    margin-bottom: 40px;
+    color: #556b2f;
+    font-size: 32px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.second-section-text {
+    margin: 30px;
+    color: #666;
+    font-size: 18px;
+}
+
+.second-section-name {
+    color: #556b2f;
+    text-transform: capitalize;
+}
+
+.second-section-name-style {
+    color: #8fbc8f;
+    font-weight: 700;
+    text-transform: uppercase;
+}
